[gd_scene load_steps=38 format=2]

[ext_resource path="res://Assets/rect.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Cowboy.gd" type="Script" id=2]
[ext_resource path="res://Assets/lasso_sprite.png" type="Texture" id=3]
[ext_resource path="res://Assets/lasso_attack.png" type="Texture" id=4]
[ext_resource path="res://Assets/lasso_close.png" type="Texture" id=5]
[ext_resource path="res://Assets/cowboy.png" type="Texture" id=6]
[ext_resource path="res://Assets/wawah.wav" type="AudioStream" id=7]

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 498, 498 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 498, 0, 498, 498 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 996, 0, 498, 498 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 498, 498, 498 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 498, 498, 498, 498 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 996, 498, 498, 498 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 996, 498, 498 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 498, 996, 498, 498 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 996, 996, 498, 498 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 1494, 498, 498 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 16.0
} ]

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="SpriteFrames" id=24]
animations = [ {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": false,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=18]
radius = 5.48323

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=29]
animations = [ {
"frames": [ SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": true,
"name": "walk",
"speed": 20.0
}, {
"frames": [ SubResource( 30 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 18.6442, 26.2207 )

[node name="Cowboy" type="Node2D"]
script = ExtResource( 2 )

[node name="CowboyBody" type="KinematicBody2D" parent="."]

[node name="LassoSprite" type="AnimatedSprite" parent="CowboyBody"]
position = Vector2( -35.4903, -78.3598 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 12 )
frame = 1
playing = true

[node name="LassoCloseSprite" type="AnimatedSprite" parent="CowboyBody"]
position = Vector2( 1.75418, -65.2547 )
scale = Vector2( 1.8, 1.8 )
frames = SubResource( 24 )

[node name="LassoAttackSprite" type="AnimatedSprite" parent="CowboyBody"]
position = Vector2( 1.40334, -66.3072 )
scale = Vector2( 2, 2 )
frames = SubResource( 17 )
frame = 1
playing = true

[node name="Area2D" type="Area2D" parent="CowboyBody/LassoAttackSprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CowboyBody/LassoAttackSprite/Area2D"]
shape = SubResource( 18 )

[node name="CowboySprite" type="AnimatedSprite" parent="CowboyBody"]
frames = SubResource( 29 )
animation = "idle"
playing = true

[node name="TextureRect" type="TextureRect" parent="CowboyBody"]
visible = false
margin_left = -22.3065
margin_top = -30.886
margin_right = 22.6935
margin_bottom = 29.114
rect_pivot_offset = Vector2( 22.2899, 31.0668 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="CowboyBody"]
shape = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="CowboyBody"]
enabled = true
cast_to = Vector2( 0, 300 )

[node name="RayCast2D2" type="RayCast2D" parent="CowboyBody"]
rotation = 0.174533
scale = Vector2( 1, 1 )
enabled = true
cast_to = Vector2( 0, 300 )

[node name="RayCast2D3" type="RayCast2D" parent="CowboyBody"]
rotation = 0.349066
scale = Vector2( 1, 1 )
enabled = true
cast_to = Vector2( 0, 300 )

[node name="RayCast2D4" type="RayCast2D" parent="CowboyBody"]
rotation = 0.523599
enabled = true
cast_to = Vector2( 0, 300 )

[node name="RayCast2D5" type="RayCast2D" parent="CowboyBody"]
rotation = 0.698132
scale = Vector2( 1, 1 )
enabled = true
cast_to = Vector2( 0, 300 )

[node name="RayCast2D6" type="RayCast2D" parent="CowboyBody"]
rotation = 0.872665
enabled = true
cast_to = Vector2( 0, 300 )

[node name="RayCast2D7" type="RayCast2D" parent="CowboyBody"]
rotation = 1.0472
enabled = true
cast_to = Vector2( 0, 300 )

[node name="RayCast2D8" type="RayCast2D" parent="CowboyBody"]
rotation = 1.22173
enabled = true
cast_to = Vector2( 0, 300 )

[node name="RayCast2D9" type="RayCast2D" parent="CowboyBody"]
rotation = 1.39626
scale = Vector2( 1, 1 )
enabled = true
cast_to = Vector2( 0, 300 )

[node name="RayCast2D10" type="RayCast2D" parent="CowboyBody"]
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 300 )

[node name="RayCast2D11" type="RayCast2D" parent="CowboyBody"]
rotation = 1.74533
scale = Vector2( 1, 1 )
enabled = true
cast_to = Vector2( 0, 300 )

[node name="RayCast2D12" type="RayCast2D" parent="CowboyBody"]
rotation = 1.91986
scale = Vector2( 1, 1 )
enabled = true
cast_to = Vector2( 0, 300 )

[node name="RayCast2D13" type="RayCast2D" parent="CowboyBody"]
rotation = 2.0944
enabled = true
cast_to = Vector2( 0, 300 )

[node name="RayCast2D14" type="RayCast2D" parent="CowboyBody"]
rotation = 2.26893
enabled = true
cast_to = Vector2( 0, 300 )

[node name="RayCast2D15" type="RayCast2D" parent="CowboyBody"]
rotation = 2.44346
enabled = true
cast_to = Vector2( 0, 300 )

[node name="RayCast2D16" type="RayCast2D" parent="CowboyBody"]
rotation = 2.61799
enabled = true
cast_to = Vector2( 0, 300 )

[node name="RayCast2D17" type="RayCast2D" parent="CowboyBody"]
rotation = 2.79253
enabled = true
cast_to = Vector2( 0, 300 )

[node name="RayCast2D18" type="RayCast2D" parent="CowboyBody"]
rotation = 2.96706
enabled = true
cast_to = Vector2( 0, 300 )

[node name="RayCast2D19" type="RayCast2D" parent="CowboyBody"]
rotation = -3.14159
enabled = true
cast_to = Vector2( 0, 300 )

[node name="RayCast2D20" type="RayCast2D" parent="CowboyBody"]
rotation = -2.96706
scale = Vector2( 1, 1 )
enabled = true
cast_to = Vector2( 0, 300 )

[node name="RayCast2D21" type="RayCast2D" parent="CowboyBody"]
rotation = -2.79253
enabled = true
cast_to = Vector2( 0, 300 )

[node name="RayCast2D22" type="RayCast2D" parent="CowboyBody"]
rotation = -2.61799
enabled = true
cast_to = Vector2( 0, 300 )

[node name="RayCast2D23" type="RayCast2D" parent="CowboyBody"]
rotation = -2.44346
enabled = true
cast_to = Vector2( 0, 300 )

[node name="RayCast2D24" type="RayCast2D" parent="CowboyBody"]
rotation = -2.26893
enabled = true
cast_to = Vector2( 0, 300 )

[node name="RayCast2D25" type="RayCast2D" parent="CowboyBody"]
rotation = -2.09439
enabled = true
cast_to = Vector2( 0, 300 )

[node name="RayCast2D26" type="RayCast2D" parent="CowboyBody"]
rotation = -1.91986
enabled = true
cast_to = Vector2( 0, 300 )

[node name="RayCast2D27" type="RayCast2D" parent="CowboyBody"]
rotation = -1.74533
enabled = true
cast_to = Vector2( 0, 300 )

[node name="RayCast2D28" type="RayCast2D" parent="CowboyBody"]
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 300 )

[node name="RayCast2D29" type="RayCast2D" parent="CowboyBody"]
rotation = -1.39626
scale = Vector2( 1, 1 )
enabled = true
cast_to = Vector2( 0, 300 )

[node name="RayCast2D30" type="RayCast2D" parent="CowboyBody"]
rotation = -1.22173
scale = Vector2( 1, 1 )
enabled = true
cast_to = Vector2( 0, 300 )

[node name="RayCast2D31" type="RayCast2D" parent="CowboyBody"]
rotation = -1.0472
enabled = true
cast_to = Vector2( 0, 300 )

[node name="RayCast2D32" type="RayCast2D" parent="CowboyBody"]
rotation = -0.872665
enabled = true
cast_to = Vector2( 0, 300 )

[node name="RayCast2D33" type="RayCast2D" parent="CowboyBody"]
rotation = -0.698132
enabled = true
cast_to = Vector2( 0, 300 )

[node name="RayCast2D34" type="RayCast2D" parent="CowboyBody"]
rotation = -0.523599
enabled = true
cast_to = Vector2( 0, 300 )

[node name="RayCast2D35" type="RayCast2D" parent="CowboyBody"]
rotation = -0.349066
enabled = true
cast_to = Vector2( 0, 300 )

[node name="RayCast2D36" type="RayCast2D" parent="CowboyBody"]
rotation = -0.174533
enabled = true
cast_to = Vector2( 0, 300 )

[node name="WahwahPlayer" type="AudioStreamPlayer2D" parent="CowboyBody"]
stream = ExtResource( 7 )
volume_db = 10.602
autoplay = true
stream_paused = true
max_distance = 500.0

[connection signal="animation_finished" from="CowboyBody/LassoCloseSprite" to="." method="_on_LassoCloseSprite_animation_finished"]
[connection signal="body_entered" from="CowboyBody/LassoAttackSprite/Area2D" to="." method="_on_Area2D_body_entered"]
